# suisho

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile
examples/: CMakeLists.txt
examples/hello_world/: main.cpp
examples/vulkan_tutorial/: main.cpp
examples/vulkan_tutorial/shaders/: compile.bat  shader.vert  vert.spv
framework/: CMakeLists.txt  suisho.h  suisho.hpp
framework/assets/shaders/: compile.sh  frag.spv  quad.vert  quad.vert.spv  shader.frag  shader.vert  test.vert  test.vert.spv  triangle.vert  triangle.vert.spv  vert.spv
framework/core/: CMakeLists.txt  EntityCommandBuffer.cpp  EntityCommandBuffer.h  EntityCommandBuffer.hpp  ISystem.h  Query.h  Query.hpp  SceneManager.cpp  SceneManager.h  SceneManager.hpp  SystemScheduler.cpp  SystemScheduler.h  SystemScheduler.hpp  SystemTraits.h  SystemTraits.hpp  Transform.cpp  Transform.h  Transform.hpp  World.cpp  World.h  WorldSerializer.cpp  WorldSerializer.h  WorldSerializer.hpp  core.h  core.hpp  dummy.cpp  exceptions.cpp  exceptions.h  macros.h  macros.hpp
framework/core/internal/: foreach_macro.h
framework/input/: CMakeLists.txt  Gamepad.cpp  Gamepad.h  Gamepad.hpp  IInputDevice.h  IInputDevice.hpp  InputAction.hpp  Keyboard.cpp  Keyboard.h  Keyboard.hpp  Mouse.cpp  Mouse.h  Mouse.hpp  input.h  input.hpp
framework/math/: CMakeLists.txt  Mat4.cpp  Mat4.h  Mat4.hpp  Quat.cpp  Quat.h  Quat.hpp  Vec2.cpp  Vec2.h  Vec2.hpp  Vec3.cpp  Vec3.h  Vec3.hpp  Vec4.cpp  Vec4.h  suisho_math.h  suisho_math.hpp
framework/rendering/: CMakeLists.txt  Material.h  Material.hpp  Renderable.hpp  Renderer2D.cpp  Renderer2D.h  Renderer2D.hpp  Renderer2D_old.cpp  Renderer2D_old.h  Renderer2D_old.hpp  RenderingSystem.cpp  RenderingSystem.h  RenderingSystem.hpp  Texture.hpp  VertexFormat.hpp  rendering.h  rendering.hpp  vulkan_tutorial.h
framework/rendering/backend/: VulkanDevice.cpp  VulkanDevice.h
framework/rendering/backend/vulkan/: VulkanBindingLayout.hpp  VulkanBuffer.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDevice.hpp  VulkanImage.h  VulkanImage.hpp  VulkanTexture.h  VulkanTexture.hpp
framework/rendering/rhi/: ICommandBuffer.h  IDevice.h
framework/resource/: CMakeLists.txt  IResourceLoader.hpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp  resource.hpp  suisho_resource.hpp  utils.hpp
framework/resource/loaders/: MaterialLoader.cpp  MaterialLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  EntityCommandBuffer_test.cpp  Query_test.cpp  World_test.cpp
tests/math/: CMakeLists.txt  Vec4_test.cpp
